--- a/01大数据/09服务器部署/02我的笔记/服务器部署.md
+++ b/01大数据/09服务器部署/02我的笔记/服务器部署.md
@@ -14,7 +14,7 @@ https://promotion.aliyun.com/ntms/act/campus2018.html?spm=a2c4e.11153940.0.0.5e4
 
 （1）需要开通安全组设置：端口映射。
 
-<img src="D:\04桌面\Spring Boot学习\03学习文件\服务器部署.assets\image-20200807102203206.png" alt="image-20200807102203206" style="zoom:80%;" />
+<img src="服务器部署.assets\image-20200807102203206.png" alt="image-20200807102203206" style="zoom:80%;" />
 
 （2）使用xshell进行连接测试
 
@@ -22,7 +22,7 @@ https://promotion.aliyun.com/ntms/act/campus2018.html?spm=a2c4e.11153940.0.0.5e4
 
 我们可以使用xshell远程连接，连接完成之后就是Linux的标准使用。
 
-![image-20200807103908769](D:\04桌面\Spring Boot学习\03学习文件\服务器部署.assets\image-20200807103908769.png)
+<img src="服务器部署.assets\image-20200807103908769.png" alt="image-20200807103908769" style="zoom:80%;" />
 
 （3）宝塔部署环境
 
@@ -30,7 +30,7 @@ https://promotion.aliyun.com/ntms/act/campus2018.html?spm=a2c4e.11153940.0.0.5e4
 
 这一步，阿里云服务器很重视，为了使用宝塔Linux部署环境，我们需要使用安全组开启8888端口。
 
-![image-20200807113637972](D:\04桌面\Spring Boot学习\03学习文件\服务器部署.assets\image-20200807113637972.png)
+<img src="服务器部署.assets\image-20200807113637972.png" alt="image-20200807113637972" style="zoom:80%;" />
 
 宝塔安装：https://www.bt.cn/download/linux.html
 
@@ -42,7 +42,7 @@ yum install -y wget && wget -O install.sh http://download.bt.cn/install/install_
 
 下载完成之后，就会得到一个地址：宝塔的控制面板。
 
-<img src="D:\04桌面\Spring Boot学习\03学习文件\服务器部署.assets\image-20200807111256434.png" alt="image-20200807111256434" style="zoom:80%;" />
+<img src="服务器部署.assets\image-20200807111256434.png" alt="image-20200807111256434" style="zoom:80%;" />
 
 使用地址、用户名和密码登录到宝塔的控制面板上即可查看。
 
