--- a/其他/02我的笔记/快捷键.md
+++ b/其他/02我的笔记/快捷键.md
@@ -49,6 +49,7 @@
 |                   自动跳转到鼠标对应的语句                   |      **Alt+f9**      |
 |                         回到类的开头                         |      Ctrl+HOME       |
 |                       抽取代码(M-->N)                        |    **Ctrl+Alt+N**    |
+|                   返回追踪代码的上/下一级                    |   Alt+方向左/右键    |
 
 ### 2 控制台快捷键
 
