部署笔记的一点更改

--- a/01大数据/09服务器部署/02我的笔记/服务器部署.md
+++ b/01大数据/09服务器部署/02我的笔记/服务器部署.md
@@ -42,13 +42,13 @@ https://promotion.aliyun.com/ntms/act/campus2018.html?spm=a2c4e.11153940.0.0.5e4
 
 宝塔安装：https://www.bt.cn/download/linux.html
 
-我们需要在xhsell控制面板上执行下面的命名进行安装宝塔Linux:
+​		我们需要在`xhsell`控制面板上执行下面的命名进行安装宝塔Linux，此时会在远程服务器上安装宝塔面板。
 
 ```ini
 yum install -y wget && wget -O install.sh http://download.bt.cn/install/install_6.0.sh && sh install.sh
 ```
 
-下载完成之后，就会得到一个地址：宝塔的控制面板。
+​		在远程服务器下载完成之后，我们可以在`Xshell`工具上就得到一个地址，我们需要在宝塔的网站中进行登录。
 
 <img src="服务器部署.assets\image-20200807111256434.png" alt="image-20200807111256434" style="zoom:80%;" />
 
