--- a/01大数据/09服务器部署/02我的笔记/服务器部署.md
+++ b/01大数据/09服务器部署/02我的笔记/服务器部署.md
@@ -2,15 +2,29 @@
 
 ## 1、购买地址
 
-阿里云服务器活动地址：
+1、阿里云-云小站
+
+网址：
 
 https://www.aliyun.com/minisite/goods?userCode=0phtycgr
 
-云翼计划：
+云小站是阿里云的官方分销平台。通过云小站我们可以看到更多云产品优惠活动。
+
+<img src="服务器部署.assets/image-20200818203532338.png" alt="image-20200818203532338" style="zoom:50%;" />
+
+2、云翼计划
+
+网址：
 
 https://promotion.aliyun.com/ntms/act/campus2018.html?spm=a2c4e.11153940.0.0.5e452d8eErMtHP&source=5176.11533457&userCode=ahxhg8oc&type=copy#stage
 
-香港服务器不要备案，到那时尽量不要自己挂VPN，会被封。
+点击后也就是进入下面的“学生特惠”界面：
+
+<img src="服务器部署.assets/image-20200818202617049.png" alt="image-20200818202617049" style="zoom: 33%;" />
+
+而点击上图第一个最新活动标签，可以到达下面的界面：
+
+<img src="服务器部署.assets/image-20200818202811523.png" alt="image-20200818202811523" style="zoom: 33%;" />
 
 ## 2、宝塔配置
 
@@ -20,7 +34,7 @@ https://promotion.aliyun.com/ntms/act/campus2018.html?spm=a2c4e.11153940.0.0.5e4
 
 我们可以使用xshell远程连接，连接完成之后就是Linux的标准使用。
 
-<img src="服务器部署.assets\image-20200807103908769.png" alt="image-20200807103908769" style="zoom:80%;" />
+<img src="服务器部署.assets\image-20200807103908769.png" alt="image-20200807103908769" style="zoom: 50%;" />
 
 2、安全组介绍
 
@@ -28,7 +42,7 @@ https://promotion.aliyun.com/ntms/act/campus2018.html?spm=a2c4e.11153940.0.0.5e4
 
 ​		这一步，阿里云服务器很重视，为了使用宝塔Linux部署环境，我们需要使用安全组开启8888端口。
 
-<img src="服务器部署.assets\image-20200807113637972.png" alt="image-20200807113637972" style="zoom:80%;" />
+<img src="服务器部署.assets\image-20200807113637972.png" alt="image-20200807113637972" style="zoom: 50%;" />
 
 （2）通过下图描述客户端是如何访问阿里云服务器的实例
 
