--- a/其他/02我的笔记/快捷键.md
+++ b/其他/02我的笔记/快捷键.md
@@ -70,6 +70,7 @@
 |        Tab         |        命令唯一时代码自动补全；多种可能情况，按两次。        |                          |
 |         yy         |                          拷贝当前行                          | 正常模式                 |
 |        5yy         |                     拷贝当前行向下的5行                      | 正常模式                 |
+|         p          |                             粘贴                             | 正常模式                 |
 |         dd         |                          删除当前行                          | 正常模式                 |
 |         u          |                        撤销刚才的动作                        | 正常模式                 |
 |      /关键字       |               回车后查找，输入n表示查找下一个                | 命令模式                 |
