--- a/其他/02我的笔记/快捷键.md
+++ b/其他/02我的笔记/快捷键.md
@@ -50,6 +50,7 @@
 |                         回到类的开头                         |      Ctrl+HOME       |
 |                       抽取代码(M-->N)                        |    **Ctrl+Alt+N**    |
 |                   返回追踪代码的上/下一级                    |   Alt+方向左/右键    |
+|                    大小写切换（要先选中）                    |     Ctrl+Shift+u     |
 
 ### 2 控制台快捷键
 
@@ -64,22 +65,7 @@
 | win10屏幕截图    |                         Win+Shift+S                          |
 | 清除浏览器缓存   |                    **ctrl+shift+delete**                     |
 
-### 3 Linux快捷键
-
-|       快捷键       |                             说明                             | 备注                     |
-| :----------------: | :----------------------------------------------------------: | ------------------------ |
-|        Tab         |        命令唯一时代码自动补全；多种可能情况，按两次。        |                          |
-|         yy         |                          拷贝当前行                          | 正常模式                 |
-|        5yy         |                     拷贝当前行向下的5行                      | 正常模式                 |
-|         p          |                             粘贴                             | 正常模式                 |
-|         dd         |                          删除当前行                          | 正常模式                 |
-|         u          |                        撤销刚才的动作                        | 正常模式                 |
-|      /关键字       |               回车后查找，输入n表示查找下一个                | 命令模式                 |
-| : set nu/:set nonu |              显示文件的行号(nu:number)/取消行号              | 命令模式                 |
-|        G/gg        |      编辑 /etc/profile 文件，定位到文档的最末行/最首行       | 正常模式下               |
-|     20+shift+g     | 编辑 /etc/profile 文件，并将光标移动到 20行。（命行）显示行号`: set nu`，（正模下）之后输入`20`,之后，输入`shift+g`。 | 先命令行模式，后正常模式 |
-|         o          |                      vim 文件中的下一行                      | 正常模式下               |
-|  取消搜寻高亮显示  |     按esc退出编辑模式，然后按shift加:输"nohl"(不加引号）     |                          |
+### 
 
 
 
