--- a/04Spring框架/02我的笔记/文件上传下载.md
+++ b/04Spring框架/02我的笔记/文件上传下载.md
@@ -92,9 +92,9 @@ mybatis.type-aliases-package=com.xiaolun.entity
 
 ### 1.1.3 文件大致结构
 
-<img src="文件上传下载.assets/image-20200617164042531.png" alt="image-20200617164042531" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/20200901083947.png" alt="image-20200617164042531" style="zoom:67%;" />
 
-<img src="文件上传下载.assets/image-20200617164126719.png" alt="image-20200617164126719" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/20200901083948.png" alt="image-20200617164126719" style="zoom:67%;" />
 
 
 
@@ -115,7 +115,7 @@ mybatis.type-aliases-package=com.xiaolun.entity
 
 + 界面显示
 
-<img src="文件上传下载.assets/image-20200525155622701.png" alt="image-20200525155622701" style="zoom:50%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/20200901083949.png" alt="image-20200525155622701" style="zoom:50%;" />
 
 + 在后端代码为：
 
@@ -138,7 +138,7 @@ user的值：User(id=0, username=xiaolun, password=1234)
 
 报错界面为：
 
-<img src="文件上传下载.assets/image-20200525151710727.png" alt="image-20200525151710727" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/20200901083950.png" alt="image-20200525151710727" style="zoom:67%;" />
 
 ### 1.2.2 列表展示界面showAll.html
 
@@ -258,7 +258,7 @@ user的值：User(id=0, username=xiaolun, password=1234)
 
 + 界面显示
 
-<img src="文件上传下载.assets/image-20200525155808566.png" alt="image-20200525155808566" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/20200901083951.png" alt="image-20200525155808566" style="zoom:80%;" />
 
 + `session.user`来自于后端代码登录成功后`session`中的值，此时，`session.user`将显示用户的账户名。
 
