--- a/06Java基础阶段/02我的笔记/多线程讲解.md
+++ b/06Java基础阶段/02我的笔记/多线程讲解.md
@@ -10,7 +10,7 @@
 
 1. 线程创建的三种方式：
 
-<img src="多线程讲解.assets/image-20200507105221179.png" alt="image-20200507105221179" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200507105221179.png" alt="image-20200507105221179" style="zoom:80%;" />
 
 
 
@@ -93,7 +93,7 @@ class WebDownloader{
 
 + 导入apache的jar包，`commons-io-2.6.jar`，使用`Add as Library...`，将jar包放到库中。其中，文件夹顺序为：
 
-<img src="多线程讲解.assets/image-20200507203155464.png" alt="image-20200507203155464" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200508100421340.png" alt="image-20200507203155464" style="zoom:80%;" />
 
 # 4 实现Runnable接口
 
@@ -505,13 +505,13 @@ class Love implements ILove{
 
 # 10 线程五大状态
 
-<img src="多线程讲解.assets/image-20200508100325786.png" alt="image-20200508100325786" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200507203155464.png" alt="image-20200508100325786" style="zoom:80%;" />
 
-<img src="多线程讲解.assets/image-20200508100421340.png" alt="image-20200508100421340" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200508100325786.png" alt="image-20200508100421340" style="zoom:80%;" />
 
 + 线程方法
 
-<img src="多线程讲解.assets/image-20200508100446737.png" alt="image-20200508100446737" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200509112958671.png" alt="image-20200508100446737" style="zoom:80%;" />
 
 ## 10.1 线程停止
 
@@ -617,7 +617,7 @@ class MyYeild implements Runnable{
 
 + 输出结果：
 
-<img src="多线程讲解.assets/image-20200509110029693.png" alt="image-20200509110029693" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200509110029693.png" alt="image-20200509110029693" style="zoom:80%;" />
 
 ## 10.4 线程强制执行
 
@@ -652,7 +652,7 @@ public class TestJoin implements Runnable{
 
 ## 10.5 观测线程状态
 
-<img src="多线程讲解.assets/image-20200509112958671.png" alt="image-20200509112958671" style="zoom:150%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200508100446737.png" alt="image-20200509112958671" style="zoom:150%;" />
 
 ```java
 public class TestState {
