--- a/06Java基础阶段/02我的笔记/注解和反射学习.md
+++ b/06Java基础阶段/02我的笔记/注解和反射学习.md
@@ -212,7 +212,7 @@ public final Class getClass()
 + 在Object类中定义了这个方法，此方法将被所有子类继承。
 + 该方法的返回值的类型是一个Class类，此类就是Java反射的源头,实际上所有反射从程序运行结果来看就是：可以通过对象反射求出类的名称。
 
-<img src="注解和反射学习.assets/image-20200504202013961.png" alt="image-20200504202013961" style="zoom:50%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200504202013961.png" alt="image-20200504202013961" style="zoom:50%;" />
 
 ## 2.3 得到类的几种方式
 
@@ -224,9 +224,9 @@ public final Class getClass()
 + 每个类的实例（例如：上图中的”张三“）都会记得自己是由哪个Class实例所生成。
 + Class类是Reflection的根源，针对任何你想要动态加载、运行的类，唯有获得相应的Class对象。
 
-<img src="注解和反射学习.assets/image-20200504203343247.png" alt="image-20200504203343247" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200504203343247.png" alt="image-20200504203343247" style="zoom:80%;" />
 
-<img src="注解和反射学习.assets/image-20200504203428478.png" alt="image-20200504203428478" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200504203428478.png" alt="image-20200504203428478" style="zoom:80%;" />
 
 + Class类的创建方式
 
@@ -323,9 +323,9 @@ public class Test04 {
 
 ## 2.5 类加载内存分析
 
-<img src="注解和反射学习.assets/image-20200504213522183.png" alt="image-20200504213522183" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200504213522183.png" alt="image-20200504213522183" style="zoom:80%;" />
 
-<img src="注解和反射学习.assets/image-20200504213608267.png" alt="image-20200504213608267" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200504213608267.png" alt="image-20200504213608267" style="zoom:80%;" />
 
 1. 类的加载与ClassLoader的理解
 
@@ -386,7 +386,7 @@ A类的无参构造代码块
 
 + 流程讲解图
 
-<img src="注解和反射学习.assets/image-20200504215952951.png" alt="image-20200504215952951" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200504215952951.png" alt="image-20200504215952951" style="zoom:80%;" />
 
 ## 2.6 分析类初始化
 
@@ -498,9 +498,9 @@ class Son extends Father{
 
 标准的JavaSE类加载器可以按要求查找类，但一旦某个类被加载到类加载器中，它将维持加载（缓存）一段时间。不过，JVM垃圾回收机制可以回收这些Class对象。
 
-<img src="注解和反射学习.assets/image-20200505204847707.png" alt="image-20200505204847707" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200505204847707.png" alt="image-20200505204847707" style="zoom:80%;" />
 
-<img src="注解和反射学习.assets/image-20200505204939144.png" alt="image-20200505204939144" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200505204939144.png" alt="image-20200505204939144" style="zoom:80%;" />
 
 ```java
 public class Test07 {
@@ -678,7 +678,7 @@ public com.xiaolun.User(java.lang.String,int,int)
   + 通过Class类的getMethod(String name,Class...parameterTypes)方法取得一个Method对象，并设置此方法操作时所需的参数类型。
   + 之后使用Object invoke(Object obj,Object[] args)进行调用，并向方法中传递设置的obj对象的参数信息。
 
-<img src="注解和反射学习.assets/image-20200505214810640.png" alt="image-20200505214810640" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200505214810640.png" alt="image-20200505214810640" style="zoom:80%;" />
 
 3. 调用指定的方法
 
@@ -850,7 +850,7 @@ public class Test11 {
 
 1. ORM 
 
-<img src="注解和反射学习.assets/image-20200506090309361.png" alt="image-20200506090309361" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200506090309361.png" alt="image-20200506090309361" style="zoom:80%;" />
 
 + 利用注解和反射完成类和表结构的映射关系。
 
