--- a/06Java基础阶段/02我的笔记/设计模式.md
+++ b/06Java基础阶段/02我的笔记/设计模式.md
@@ -313,11 +313,11 @@ public class Consume {
 }
 ```
 
-<img src="设计模式.assets/image-20200521221713724.png" alt="image-20200521221713724" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521222459636.png" alt="image-20200521221713724" style="zoom:80%;" />
 
 #### 1.2.2.2 工厂方法模式
 
-<img src="设计模式.assets/image-20200521222459636.png" alt="image-20200521222459636" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521221713724.png" alt="image-20200521222459636" style="zoom:67%;" />
 
 1. **创建车工厂接口**
 
@@ -359,7 +359,7 @@ public class Consume {
 }
 ```
 
-<img src="设计模式.assets/image-20200521222921724.png" alt="image-20200521222921724" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521232141716.png" alt="image-20200521222921724" style="zoom:67%;" />
 
 ## 1.3 抽象工厂模式
 
@@ -518,11 +518,11 @@ public class Client {
 }
 ```
 
-<img src="设计模式.assets/image-20200521232141716.png" alt="image-20200521232141716" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521232243567.png" alt="image-20200521232141716" style="zoom:67%;" />
 
-<img src="设计模式.assets/image-20200521232243567.png" alt="image-20200521232243567" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521222921724.png" alt="image-20200521232243567" style="zoom:80%;" />
 
-<img src="设计模式.assets/image-20200521232332110.png" alt="image-20200521232332110" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200522145749919.png" alt="image-20200521232332110" style="zoom:67%;" />
 
 ## 1.4 建造者模式
 
@@ -548,7 +548,7 @@ public class Client {
 
 #### 1.4.2.1 常规用法
 
-<img src="设计模式.assets/image-20200522145749919.png" alt="image-20200522145749919" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200603110733600.png" alt="image-20200522145749919" style="zoom:67%;" />
 
 1. **创建抽象的建造者**
 
@@ -888,7 +888,7 @@ Product{buildA='全家桶', buildB='雪碧', buildC='薯条', buildD='甜点'}
 
 客户租房过程。
 
-<img src="设计模式.assets/image-20200603110733600.png" alt="image-20200603110733600" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521232332110.png" alt="image-20200603110733600" style="zoom:67%;" />
 
 1. **接口**
 
@@ -1095,7 +1095,7 @@ public class Client {
 
 + 加深理解代理模式
 
-<img src="设计模式.assets/image-20200603173925945.png" alt="image-20200603173925945" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200603173925945.png" alt="image-20200603173925945" style="zoom:80%;" />
 
 ### 1.5.2 动态代理
 
@@ -1106,11 +1106,11 @@ public class Client {
 
 第一种是有接口的情况，我们使用的是基于接口的动态代理（JDK动态代理）。此时创建接口实现类代理对象，来增强类的方法。
 
-<img src="设计模式.assets\image-20200626180310434.png" alt="image-20200626180310434" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200626180346033.png" alt="image-20200626180310434" style="zoom:67%;" />
 
 第二种是没有接口的情况，我们使用的是基于CGLIB（Code Generator Library）代码生成库的动态代理。此时创建子类的代理对象，来增强类的方法。
 
-<img src="设计模式.assets\image-20200626180346033.png" alt="image-20200626180346033" style="zoom: 50%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200626180819210.png" alt="image-20200626180346033" style="zoom: 50%;" />
 
 在实现的过程中，我们需要了解两个类：`Proxy`（代理）和`InvocationHandler`（调用处理程序）。
 
@@ -1235,7 +1235,7 @@ public class ProxyInvocationHandler implements InvocationHandler {
 
 Class Proxy（java.lang.reflect.proxy）下的方法：
 
-<img src="设计模式.assets\image-20200626180819210.png" alt="image-20200626180819210" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623150916769.png" alt="image-20200626180819210" style="zoom:67%;" />
 
 ```ini
 第一个参数：类加载器
@@ -1415,7 +1415,7 @@ v2的hascode()---->21685669
 
 但是上面的克隆属于浅克隆，当`v1`对应的时间发生变化的时候，v2对应的时间也发生变化，这是我们不想看到的，我们应该进行深克隆。
 
-<img src="设计模式.assets\image-20200623170100439.png" alt="image-20200623170100439" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623170100439.png" alt="image-20200623170100439" style="zoom:80%;" />
 
 1. **改造克隆代码**
 
@@ -1474,7 +1474,7 @@ v2--->Visio{name='xiaolun', createTime=Tue Jun 23 16:54:40 CST 2020}
 + 需要适配的类：需要适配的类或适配类（网线接口）。
 + 适配器：通过包装一个需要适配的对象，把原接口转换成目标接口。
 
-<img src="设计模式.assets\image-20200623150916769.png" alt="image-20200623150916769" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200626180310434.png" alt="image-20200623150916769" style="zoom:80%;" />
 
 **对象适配器的特点**
 
@@ -1570,11 +1570,11 @@ public class Computer {
 
 该模式是将抽象部分与它的实现部分分离，使它们都可以独立的变化。它是一种对象结构型模式，又称为接口模式。
 
-<img src="设计模式.assets\image-20200623154356515.png" alt="image-20200623154356515" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623154356515.png" alt="image-20200623154356515" style="zoom:67%;" />
 
 该场景中有两个变化的维度：品牌和类型。
 
-<img src="设计模式.assets\image-20200623154425976.png" alt="image-20200623154425976" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623161516493.png" alt="image-20200623154425976" style="zoom:80%;" />
 
 **优点**
 
@@ -1592,7 +1592,7 @@ public class Computer {
 
 ### 2.2.1 测试
 
-<img src="设计模式.assets\image-20200623161516493.png" alt="image-20200623161516493" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623154425976.png" alt="image-20200623161516493" style="zoom:80%;" />
 
 1. **品牌接口类**
 
