--- a/06Java基础阶段/02我的笔记/输入输出流.md
+++ b/06Java基础阶段/02我的笔记/输入输出流.md
@@ -10,9 +10,9 @@
 
 （2）文件在程序中是以流的形式来操作的。
 
-<img src="输入输出流.assets\image-20200811222032526.png" alt="image-20200811222032526" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200811222032526.png" alt="image-20200811222032526" style="zoom:80%;" />
 
-<img src="输入输出流.assets\image-20200813111135892.png" alt="image-20200813111135892" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200813111135892.png" alt="image-20200813111135892" style="zoom:80%;" />
 
 判断输入流和输出流的方法：
 
@@ -40,8 +40,6 @@
 （c）进行读写的操作。
 
 （d）流属于宝贵资源，操作完毕之后一定要进行关闭（close()）。
-
-
 
 ### 3、File用法
 
@@ -235,7 +233,7 @@ private static void deleteCreateFile() {
 
 文件的操作过程如下：
 
-<img src="输入输出流.assets\image-20200812191256027.png" alt="image-20200812191256027" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200812191256027.png" alt="image-20200812191256027" style="zoom:67%;" />
 
 （2）Java本身采用的是跨平台的编程模式，那么这种情况下，就必须考虑各种的系统的路径问题。
 
@@ -305,7 +303,7 @@ private static void newFile2() {
 
 ​		虽然这个时候可以正常的实现了目录下文件的创建，但是如果每一次执行的时候都需要进行我们的判断，那么就会有可能影响到我们程序的性能，因此，最好的做法就是让这个判断操作只执行一次。
 
-<img src="输入输出流.assets\image-20200813094139174.png" alt="image-20200813094139174" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200813094139174.png" alt="image-20200813094139174" style="zoom:80%;" />
 
 3、代码重构
 
@@ -445,9 +443,9 @@ public interface Flushable{
 }
 ```
 
-<img src="输入输出流.assets\OutputStream.png" alt="OutputStream" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/OutputStream.png" alt="OutputStream" style="zoom:80%;" />
 
-<img src="输入输出流.assets\image-20200813143206561.png" alt="image-20200813143206561" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200813143206561.png" alt="image-20200813143206561" style="zoom:80%;" />
 
 2、输出方法
 
@@ -510,7 +508,7 @@ public abstract class InputStream extends Object
 implements Closeable
 ```
 
-<img src="输入输出流.assets\InputStream.png" alt="InputStream" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/InputStream.png" alt="InputStream" style="zoom:80%;" />
 
 ​		在进行读的时候是不会用到系统的缓冲区的，也就是说为了防止过多的写入才会提供写入缓冲区，写入的缓冲区需要清空处理，所以`InputStream`类不会实现`Flush`。
 
@@ -571,9 +569,9 @@ public abstract class Writer extends Object
 implements Appendable, Closeable, Flushable
 ```
 
-<img src="输入输出流.assets\Writer-1597303273439.png" alt="Writer" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/Writer-20200901.png" alt="Writer-20200901" style="zoom:50%;" />
 
-<img src="输入输出流.assets\FileWriter.png" alt="FileWriter" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/FileWriter.png" alt="FileWriter" style="zoom:80%;" />
 
 2、输出方法
 
@@ -620,7 +618,7 @@ public abstract class Reader extends Object
 implements Readable, Closeable
 ```
 
-<img src="输入输出流.assets\Reader.png" alt="Reader" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/Reader.png" alt="Reader" style="zoom:80%;" />
 
 ​	在Reader中并没有提供像InputStream类那样读取全部内容的方法。Reader类比较理智，考虑到了在进行读取时有可能造成的内存溢出问题，在Reader里面的读取操作依然采取像InputStream那样的基本流程处理。
 
@@ -664,7 +662,7 @@ private static void fileReaderDemo() {
 
 2、在进行网络传输或者磁盘数据存储的时候，所有存放的内容都输入字节数据。
 
-<img src="输入输出流.assets\image-20200813155323684.png" alt="image-20200813155323684" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200813155323684.png" style="zoom:80%;" />
 
 ​		要想观察出字符流的缓冲区的存在，只需要在输出的时候取消掉`close()`方法即可，因为此方法一旦调用实际上会自动清空缓冲区的内容，随后才会将数据写入到目标终端设备上。
 
@@ -676,9 +674,9 @@ private static void fileReaderDemo() {
 
 ​		为了实现字节流和字符流的转换处理，提供了两个类：`OutputStreamWriter`、`InputStreamReader`，两个类的继承结构如下：
 
-<img src="输入输出流.assets\OutputStreamWriter.png" alt="OutputStreamWriter" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/OutputStreamWriter.png" alt="OutputStreamWriter" style="zoom:80%;" />
 
-<img src="输入输出流.assets\InputStreamReader.png" alt="InputStreamReader" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/InputStreamReader.png" alt="InputStreamReader" style="zoom:80%;" />
 
 ​		通过继承关系可以发现，InputStreamReader、OutputStreamWriter都是字符流的子类，同时可以通过构造方法接收InputStream、OutputStream类的实例，然后再向上转型成为字符流。
 
@@ -777,17 +775,17 @@ private static void encodingDemo() {
 
 （2）字符操作流：CharArrayReader、CharArrayWriter。
 
-<img src="输入输出流.assets\ByteArrayInputStream.png" alt="ByteArrayInputStream" style="zoom:67%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/ByteArrayInputStream.png" alt="ByteArrayInputStream" style="zoom:67%;" />
 
-<img src="输入输出流.assets\ByteArrayOutputStream.png" alt="ByteArrayOutputStream" style="zoom:67%;" />
-
-
-
-<img src="输入输出流.assets\image-20200813170200347.png" alt="image-20200813170200347" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/ByteArrayOutputStream.png" alt="ByteArrayOutputStream" style="zoom:67%;" />
 
 
 
-<img src="输入输出流.assets\image-20200813170219153.png" alt="image-20200813170219153" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200813170200347.png" alt="image-20200813170200347" style="zoom:80%;" />
+
+
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200813170219153.png" alt="image-20200813170219153" style="zoom:80%;" />
 
 2、案例
 
