--- a/06Java基础阶段/02我的笔记/设计模式.md
+++ b/06Java基础阶段/02我的笔记/设计模式.md
@@ -1,8 +1,18 @@
 # 1 创建型模式
 
-## 1.1 单例模式
+## 1、单例模式
 
-该模式就是采取一定的方法保证在整个的软件系统中，对于某个类只能存在一个对象实例，并且该类知提供一个取得该对象实例的方法。
+所谓类的单例设计模式，就是采取一定的方法保证在整个的软件系统中，对某个类只能存在一个对象实例，并且该类只提供一个取得其对象实例的方法(静态方法)。
+
+构造器私有的理解：
+
+将一个类的构造函数进行私有化，可以使得该类不被实例化继承。此时，对象只能在内部构建（即创建这个类的实例，唯一的办法是提供一个公共静态方法。），并向外提供。这是Java提供的访问控制机制。
+
+参考博客：
+
+```http
+https://blog.csdn.net/qq_36186690/article/details/82945836
+```
 
 ### 1.1.1 饿汉式（静态变量）
 
@@ -21,7 +31,7 @@ public class Singleton {
 }
 ```
 
-+ **测试**
+测试
 
 ```java
 public class Test {
@@ -37,17 +47,13 @@ public class Test {
 
 可以发现二者输出的`hasCode()`是相同的。
 
-**优点**
+优点：这种写法比较简单，就是在类加载的时候就完成了实例化，避免了线程同步问题。
 
-这种写法比较简单，就是在类加载的时候就完成了实例化，避免了线程同步问题。
-
-**缺点**
-
-在类加载的时候完成了实例化，假如没有使用这个类，将会造成内存的浪费。
+缺点：在类加载（不能确定有其他的方式（或者其他的静态方法）导致类装载，这时候初始化instance就没有达到lazy loading的效果）的时候完成了实例化，假如没有使用这个类，将会造成内存的浪费。
 
 也可以写成下面的写法：
 
-**饿汉式（静态代码块）**
+饿汉式（静态代码块）
 
 ```java
 private static final Singleton2 instance;
@@ -79,13 +85,9 @@ public class Singleton3 {
 }
 ```
 
-**优点**
+优点：起到了满加载的效果，在使用的时候才创建实例对象。
 
-起到了满加载的效果，在使用的时候才创建实例对象。
-
-**缺点**
-
-不能在单线程下使用，这是因为，在多线程下，一个线程进入到`if (instance == null)`的判断语句，还没有来得及往下执行，另一个线程也通过了这个判断语句，便会产生多个实例，所以在多线程环境中不推荐使用这种方式。
+缺点：不能在单线程下使用，这是因为，在多线程下，一个线程进入到`if (instance == null)`的判断语句，还没有来得及往下执行，另一个线程也通过了这个判断语句，便会产生多个实例，所以在多线程环境中不推荐使用这种方式。
 
 我们可以使用下面的方式来保证线程安全。
 
@@ -103,7 +105,9 @@ public static synchronized Singleton4 getInstance(){
 
 优点：解决了线程不安全问题。
 
-缺点：降低执行效率，每个线程在像获得实例的时候，执行`getInstance`方法都要执行同步，而实际上，这个方法只需要执行一次实例化就好了，后面的想获得该类实例，只需要`return`就行了。因此，在实际开发中，不推荐使用这种方式。
+缺点：降低执行效率，每个线程在获得实例的时候，执行`getInstance`方法都要执行同步，而实际上，这个方法只需要执行一次实例化就好了，后面的想获得该类实例，只需要`return`就行了。
+
+因此，在实际开发中，不推荐使用这种方式。
 
 **懒汉式（线程安全，同步代码块）**
 
@@ -118,21 +122,28 @@ public static  Singleton5 getInstance(){
 }
 ```
 
-但是这种同步并不能起到线程同步的作用。假如一个线程进入到`if (instance == null)`的判断语句，还没有来得及往下执行，另一个线程也通过了这个判断语句，这样就会产生多个实例。因此，在实际开发中，不能使用这种方式。
+但是这种同步并不能起到线程同步的作用。假如一个线程进入到`if (instance == null)`的判断语句，还没有来得及往下执行，另一个线程也通过了这个判断语句，这样就会产生多个实例。
+
+因此，在实际开发中，不能使用这种方式。
 
 ### 1.1.3 双重检查(Double-check)
 
 ```java
 //双重检查
 public class Singleton6 {
-    //用volatile修饰的变量，线程在每次使用变量的时候，都会读取变量修改后的值。
+    //用volatile（立即更新变量）修饰的变量，线程在每次使用变量instance的时候，都会读取变量修改后的值。
     private static volatile Singleton6 instance;
     private Singleton6(){
     }
 
     public static Singleton6 getInstance(){
         if (instance == null){
-            //进到这个同步代码中的只能是一个线程
+            		/**
+			 * 假设a,b同时通过if (instance == null) 进入下面的静态代码块，假设进程a先获取
+			 * 锁，此时b等待；当a创建对象完成之后，释放锁，b进入，但是进入后发现if (instance ！= null)
+			 * 就很快退出。
+			 * 在大if()之外的代码此时不会符合条件，直接返回instance。
+			 */
             synchronized (Singleton.class){
                 if (instance == null){
                     instance = new Singleton6();
@@ -144,7 +155,9 @@ public class Singleton6 {
 }
 ```
 
-实例化代码只用来执行一次，后面再次访问时，通过判断语句 `if (instance == null)`直接`return`实例化对象，所以该模式线程安全，延迟加载，效率较高。
+Double-Check概念是多线程开发中常使用到的，如代码中所示，我们进行了两 次if (singleton == null)检查，这样就可以保证线程安全了。
+
+实例化代码只用来执行一次，后面再次访问时，通过判断语句 第一个的`if (instance == null)`直接`return`实例化对象，所以该模式线程安全，延迟加载，效率较高。解决线程安全问题, 同时解决懒加载问题。
 
 在实际开发中，推荐使用这种设计模式。
 
@@ -164,16 +177,15 @@ public class Singleton7 {
 }
 ```
 
-**静态内部类的特点**
+静态内部类的特点：
 
-1. 外部类被装载的时候，静态内部类并不会立即被装载。
-2. 当调用上面代码的`getInstance()`方式时，静态内部类会被装载，并且只会装载一次。通过这种方式可以完成`Singleton7`的实例化。
+1、外部类被装载的时候，静态内部类并不会立即被装载。
+
+2、当调用上面代码的`getInstance()`方式时，静态内部类会被装载，并且只会装载一次。通过这种方式可以完成`Singleton7`的实例化。
 
 静态内部类创建实例化的方式采用了类加载的机制来保证初始化实例时只有一个线程。（在类初始化过程中，别的线程无法进入）
 
-**优点**
-
-避免了线程不安全的问题，利用静态内部类特点可以实现延迟加载，效率较高。推荐使用。
+优点：避免了线程不安全的问题，利用静态内部类特点可以实现延迟加载，效率较高。推荐使用。
 
 ### 1.1.4 枚举方式
 
@@ -186,7 +198,6 @@ public class Singleton8{
         System.out.println(instance.hashCode());
         System.out.println(instance2.hashCode());
     }
-
 }
 
 enum SingletonEnum{
@@ -202,30 +213,33 @@ enum SingletonEnum{
 
 ### 1.1.5 注意事项
 
-1. 在我们的`JDK`中，`java.lang.Runtime`就是典型的单例模式，它使用的是一个饿汉式的单例模式。
+1、在我们的`JDK`中，`java.lang.Runtime`就是典型的单例模式，它使用的是一个饿汉式的单例模式。
 
-2. 单例模式保证了系统内存中该类只存在一个对象，节省了系统资源，对于需要频繁创建销毁的对象，使用单例模式可以提高系统性能。
-3. 当想实例化一个单例类的时候，必须要记住使用相应的获取对象的方法，而不是使用`new`。
+2、单例模式保证了系统内存中该类只存在一个对象，节省了系统资源，对于需要频繁创建销毁的对象，使用单例模式可以提高系统性能。
 
-## 1.2  工厂模式
+3、当想实例化一个单例类的时候，必须要记住使用相应的获取对象的方法，而不是使用`new`。
 
-### 1.2.1 介绍
+## 2、工厂模式
+
+### 1、介绍
+
+简单工厂模式是由一 个工厂对象决定创建出哪一种产品类的实例，简单工厂模式：定义了一个创建对象的类，由这个类来封装实例化对象的行为(代码)。
 
 1. **作用**
 
 实现了创建者和调用者的分离。详细分类为：
 
-+ 简单工厂模式（静态工厂模式）
+（1）简单工厂模式（静态工厂模式）
 
 用来生产同一等级结构中的任意产品（对于增加新的产品，需要覆盖原有代码）。
 
 虽然在某种程度上不符合设计原则，但实际使用最多。根据设计原则，工厂方法模式比较适合；根据实际业务，简单工厂模式比较适合。
 
-+ 工厂方法模式
+（2）工厂方法模式
 
 用来生产同一等级结构中的固定产品（支持增加任意产品）。
 
-+ 抽象工厂模式
+（3）抽象工厂模式
 
 围绕一个超级工厂创建其他工厂。该超级工厂又被称为其他工厂的工厂。不可以增加产品，但是可以增加产品族。
 
@@ -247,9 +261,9 @@ enum SingletonEnum{
 + Spring中IOC容器创建管理bean对象。
 + 反射中Class对象的newInstance方法。
 
-### 1.2.2 创建项目
+### 2、创建项目
 
-#### 1.2.2.1 简单工厂模式
+#### 简单工厂模式
 
 1. **创建Car接口**
 
@@ -263,12 +277,13 @@ public interface Car {
 
 ```java
 public class CarFactory {
-    //方法1
+    //静态方法
+    //直接进行业务上的判定，返回对象给客户端。简单直接。
     public static Car getCar(String car){
         if (car.equals("wuling")){
             return new WuLing(); //我们不用管怎么实现的。
         }else if (car.equals("Tesla")){
-            return new Tesla(); //我们不用管怎么实现的。
+            return new Tesla(); 
         }else {
             return null;
         }
@@ -277,7 +292,7 @@ public class CarFactory {
 ```
 
 + 车工厂就是来拿车的，我们只需要传入车的名字即可。
-+ 加入要增加一辆车，我们需要对上面的代码进行修改(这不符合开闭原则，对修改是关闭的)。
++ 加入要增加一辆车，我们需要对上面的代码进行修改(这不符合开闭原则，用户对修改是关闭的)。
 
 3. **车的实现类**
 
@@ -315,22 +330,35 @@ public class Consume {
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521222459636.png" alt="image-20200521221713724" style="zoom:80%;" />
 
-#### 1.2.2.2 工厂方法模式
+通过代码，我们可以看出：
+
+（1）简单工厂CarFactory包含必要的判断逻辑，实现了对象的创建和使用的分离。
+
+（2）客户端无需知道所创建的具体产品类的类名，只需要具体产品类对应的参数即可。
+
+（3）在不修改任何客户端代码的情况下更换和增加新的具体产品类，在一定程度上提高了系统的灵活性，但是这导致工厂类的职责过重，在一定程度上违反了开闭原则。
+
+#### 工厂方法模式
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521221713724.png" alt="image-20200521222459636" style="zoom:67%;" />
 
-1. **创建车工厂接口**
+1、创建车工厂接口
 
 ```java
 public interface CarFactory {
+  	//接口里面又放了一个接口
     Car getCar();
 }
 ```
 
-2. **分别创建对应的汽车工厂**
+工厂方法模式，有了进步，把工厂类进行改造，提升为一个接口，把对具体产品的实现交给对应的具体子类来做，实现多个产品之间的业务逻辑的解耦。
+
+2、分别创建对应的汽车工厂
 
 ```java
 public class WuLingFactory implements CarFactory {
+   //把 new 类的动作放在一个工厂的方法中，并返回
+   //变量不要直接持有具体类的引用
     @Override
     public Car getCar() {
         return new WuLing();
@@ -359,31 +387,55 @@ public class Consume {
 }
 ```
 
+通过上面的代码我们可以看出：
+
+（1）工厂方法用来创建客户端所需要的产品，同时隐藏了那种具体产品类被实例化的细节，用户只需要关注工厂，不需要关注创建的细节。
+
+（2）在增加新产品的时候，只需要增加对应的工厂就好。但是也带来了额外的开销。
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521222921724.png" alt="image-20200521232243567" style="zoom:80%;" />
+
+前面都是针对一个产品族的设计，如果有多个产品族的话，就可以使用下面的抽象工厂模式。
+
+#### 抽象工厂模式
+
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521232141716.png" alt="image-20200521222921724" style="zoom:67%;" />
 
-## 1.3 抽象工厂模式
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521232243567.png" alt="image-20200521232141716" style="zoom: 33%;" />
 
-### 1.3.1 介绍
 
-1. **定义**
+
+产品等级：小米手机和华为手机就是一个产品等级结构。
+
+产品族：不同的产品等级结构的一组产品组成产品族。
+
+抽象工厂模式的工厂，不再维护一个产品等级的某个产品，而是维护产品结构里面的所有产品，具体到代码就是多个抽象方法去对应产品等级结构的各个产品实例。
+
+具体的工厂类实现**抽象工厂接口（IphoneProduct iphoneProduct();）**，去对应各个产品族，每一个具体工厂对一个产品族，获得该产品族的产品结构（所有产品）。
+
+抽象工厂模式中的方法（start()）对应产品等级结构（每个类型中的具体产品），具体子工厂对应不同的产品族（产品类型）。
+
+### 1、介绍
+
+1. 定义
 
 抽象工厂模式提供了一个创建一系列相关或者相互依赖对象的接口，无需指定他们具体实现的类。
 
-2. **使用场景**
+2. 使用场景
 
 + 客户端（应用层）不依赖于产品类实例如何被创建、实现等细节。
 + 强调一系列相关产品对象（属于同一个产品族）一起使用创建对象需要大量的重复代码。
 + 提供一个产品类的库，所有的产品以同样的接口出现，从而使得客户端不依赖于具体的实现。
 
-3. **优点**
+3. 优点
 
 具体产品在应用层的代码隔离，无需关心创建的细节。将一系列的产品统一到一起创建。
 
-4. **缺点**
+4. 缺点
 
 规定了所有被创建的产品集合，产品簇中扩展新的产品困难。增加了系统的抽象性和理解难度。
 
-### 1.3.2 创建项目
+### 2、创建项目
 
 1. **创建手机产品接口**
 
@@ -415,22 +467,22 @@ public interface IRouterProduct {
 public class XiaomiPhone implements IphoneProduct {
     @Override
     public void start() {
-        System.out.println("开启华为手机");
+        System.out.println("开启小米手机");
     }
 
     @Override
     public void shutdown() {
-        System.out.println("关闭华为手机");
+        System.out.println("关闭小米手机");
     }
 
     @Override
     public void callup() {
-        System.out.println("华为打电话");
+        System.out.println("小米打电话");
     }
 
     @Override
     public void sendSMS() {
-        System.out.println("华为发短信");
+        System.out.println("小米发短信");
     }
 }
 ```
@@ -438,7 +490,7 @@ public class XiaomiPhone implements IphoneProduct {
 4. **创建小米/华为路由器实现类**
 
 ```java
-public class XiaomiRouter implements IRouterProduct {
+public class XiaomiRouter implements IRouterProduct{
     @Override
     public void start() {
         System.out.println("启动小米路由器");
@@ -466,7 +518,7 @@ public class XiaomiRouter implements IRouterProduct {
 ```java
 public interface IProductFactory {
 
-    //生产手机
+    //生产手机（接口）
     IphoneProduct iphoneProduct();
 
     //生产路由器
@@ -477,7 +529,7 @@ public interface IProductFactory {
 6. **创建小米/华为工厂生产**
 
 ```java
-/小米手机和路由器由小米工厂生产
+//小米手机和路由器由小米工厂生产
 public class XiaomiFactory implements IProductFactory {
     @Override
     public IphoneProduct iphoneProduct() {
@@ -513,353 +565,286 @@ public class Client {
         iRouterProduct.shutdown();
         iRouterProduct.openWifi();
         iRouterProduct.setting();
-
     }
 }
 ```
 
-<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521232243567.png" alt="image-20200521232141716" style="zoom:67%;" />
+小结：
 
-<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521222921724.png" alt="image-20200521232243567" style="zoom:80%;" />
+（1）创建对象实例时，不要直接 new 类, 而是把这个new 类的动作放在一个**工厂的方法**中，并返回。有的书上说，变量不要直接持有具体类的引用。 
+
+（2）不要让类继承具体类，而是继承抽象类或者是实现interface(接口) 。
+
+（3）不要覆盖基类中已经实现的方法。
+
+## 4、建造者模式
+
+建造者模式（Builder Pattern） 又叫生成器模式，是一种对象构建模式。它可以 将复杂对象的建造过程抽象出来（抽象类别），使这个抽象过程的不同实现方 法可以构造出不同表现（属性）的对象。 
+
+ 建造者模式 是一步一步创建一个复杂的对象，它允许用户只通过指定复杂对象的类型和内容就可以构建它们，用户不需要知道内部的具体构建细节。
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200522145749919.png" alt="image-20200521232332110" style="zoom:67%;" />
 
-## 1.4 建造者模式
+### 1、介绍
 
-### 1.4.1 介绍
-
-1. **定义**
-
-将一个复杂对象的构建与它的表示相分离，使得同样的构建过程可以创建不同的表示。
-
-2. **作用**
+1、作用
 
 在用户不知道对象的建造过程和细节的情况下就可以创建复杂的对象。用户只需要给出指定的复杂对象的类型和内容，建造者模式负责按照顺序创建复杂对象（将内部的建造过程和细节隐藏起来）
 
-建造者模式属于创建型模式，它提供了一个创建对象的最佳方式。
+2、例子
 
-3. **例子**
-
-工厂（建造者模式）：复杂制造汽车（组装过程和细节再工厂内）。工厂模式生产零件，建造者模式构建复杂对象。
+工厂（建造者模式）：复杂制造汽车（组装过程和细节在工厂内）。工厂模式生产零件，建造者模式构建复杂对象。
 
 汽车购买者（用户）：你只需要说出你需要的型号（对象的类型和内容），然后直接购买就可以使用了（不需要指导汽车石如何组装的（车门，发动机，方向盘等））
 
-### 1.4.2 创建项目
+3、建造者模式的四个角色
 
-#### 1.4.2.1 常规用法
+![image-20200922201726440](https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200922201726440.png)
+
+原理类图：
+
+![image-20200922201744543](https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200922201744543.png)
+
+### 2、传统方法
+
+需求：建房子包括打桩、砌墙、封顶三个过程。
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200603110733600.png" alt="image-20200522145749919" style="zoom:67%;" />
 
-1. **创建抽象的建造者**
+（1）创建抽象的产品-房子
 
 ```java
-//抽象的建造者，定义一些方法和接口
-public abstract class Builder {
-    //建房子的四个步骤
-    abstract void builderA();  //地基
-    abstract void builderB();  //钢筋水泥
-    abstract void builderC();  //铺电线
-    abstract void builderD();  //粉刷
+package com.atguigu.builder;
 
-    //完工，得到具体的产品
-    abstract Product getProduct();
+/**
+ * @time 2020.09.22
+ * @desc 原型模式
+ */
+public abstract class AbstractHouse {
+	//打地基
+	public abstract void buildBasic();
+	//砌墙
+	public abstract void buildWalls();
+	//封顶
+	public abstract void roofed();
+	
+	public void build() {
+		buildBasic();
+		buildWalls();
+		roofed();
+	}
 }
 ```
 
-2. **创建产品类**
+（2）创建具体的建造者
 
 ```java
-//产品，房子
-public class Product {
-    private String buildA;
-    private String buildB;
-    private String buildC;
-    private String buildD;
+package com.atguigu.builder;
 
-    public String getBuildA() {
-        return buildA;
-    }
+public class CommonHouse extends AbstractHouse {
+	@Override
+	public void buildBasic() {
+		System.out.println(" 普通房子打地基 ");
+	}
 
-    public void setBuildA(String buildA) {
-        this.buildA = buildA;
-    }
+	@Override
+	public void buildWalls() {
+		System.out.println(" 普通房子砌墙 ");
+	}
 
-    public String getBuildB() {
-        return buildB;
-    }
-
-    public void setBuildB(String buildB) {
-        this.buildB = buildB;
-    }
-
-    public String getBuildC() {
-        return buildC;
-    }
-
-    public void setBuildC(String buildC) {
-        this.buildC = buildC;
-    }
-
-    public String getBuildD() {
-        return buildD;
-    }
-
-    public void setBuildD(String buildD) {
-        this.buildD = buildD;
-    }
-
-    @Override
-    public String toString() {
-        return "Product{" +
-                "buildA='" + buildA + '\'' +
-                ", buildB='" + buildB + '\'' +
-                ", buildC='" + buildC + '\'' +
-                ", buildD='" + buildD + '\'' +
-                '}';
-    }
+	@Override
+	public void roofed() {
+		System.out.println(" 普通房子封顶 ");
+	}
 }
 ```
 
-3. **创建指挥类**
+（3）客户端-测试类
 
 ```java
-//指挥：核心，负责指挥构建一个工程，工程如何构建，由它决定(构建过程)
-public class Director {
-    //指挥一个抽象的建造者(指挥工人按照顺序建房子)
-    public Product build(Builder builder){
-        builder.builderA(); //核心的构建顺序在这里
-        builder.builderB();
-        builder.builderC();
-        builder.builderD();
+package com.atguigu.builder;
 
-        return builder.getProduct();
-    }
+public class Client {
+	public static void main(String[] args) {
+		CommonHouse commonHouse = new CommonHouse();
+		commonHouse.build();
+	}
 }
 ```
 
-4. **创建具体的建造者**
+传统方法比较好理解，但是没有设计缓存层对象，程序的扩展和维护不好。在上面这种设计方案中，把产品（房子）和创建过程封装在一起，耦合性太强了。
+
+### 3、改进用法
+
+（1）创建产品类
 
 ```java
-//具体的建造者：工人（完成这些步骤，返回产品）
-public class Worker extends Builder {
-    private Product product; //需要完成的产品
+package com.atguigu.builder.improve;
 
-    public Worker(){ //具体的工人
-        product = new Product(); //任务来源，由工人直接创造的
-    }
-    //下面的产品并没有人去调用，没有顺序
-    @Override
-    void builderA() {
-        product.setBuildA("地基");
-        System.out.println("地基");
-    }
+//产品->Product 没有具体的构造过程
+public class House {
+	private String baise;
+	private String wall;
+	private String roofed;
 
-    @Override
-    void builderB() {
-        product.setBuildB("钢筋水泥");
-        System.out.println("钢筋水泥");
-    }
+	public String getBaise() {
+		return baise;
+	}
 
-    @Override
-    void builderC() {
-        product.setBuildC("铺电线");
-        System.out.println("铺电线");
-    }
+	public void setBaise(String baise) {
+		this.baise = baise;
+	}
 
-    @Override
-    void builderD() {
-        product.setBuildD("粉刷");
-        System.out.println("粉刷");
-    }
+	public String getWall() {
+		return wall;
+	}
 
-    @Override
-    Product getProduct() {
-        return product;
-    }
+	public void setWall(String wall) {
+		this.wall = wall;
+	}
+
+	public String getRoofed() {
+		return roofed;
+	}
+
+	public void setRoofed(String roofed) {
+		this.roofed = roofed;
+	}
 }
 ```
 
-5. **测试类**
+（2）创建抽象的建造者
 
 ```java
-public class Test {
-    public static void main(String[] args) {//表示层
-        //指挥
-        Director director = new Director();
-        //指挥具体的工人完成产品
-        Product build = director.build(new Worker());
-        build.toString();
-    }
+package com.atguigu.builder.improve;
+
+// 抽象的建造者
+public abstract class HouseBuilder {
+	protected House house = new House(); //产品和build之间是组合的关系
+
+	//将建造的流程写好, 抽象的方法
+	public abstract void buildBasic();
+
+	public abstract void buildWalls();
+
+	public abstract void roofed();
+
+	//建造房子好， 将产品(房子) 返回
+	public House buildHouse() {
+		return house;
+	}
+}
+
+```
+
+（3）创建具体建造者
+
+```java
+package com.atguigu.builder.improve;
+
+/**
+ * 具体的建造者
+ * 房子属性封装到House中，制作过程封装在本类中，将制作流程和产品本身拆解
+ */
+public class CommonHouse extends HouseBuilder {
+
+	@Override
+	public void buildBasic() {
+		System.out.println(" 普通房子打地基5米 ");
+	}
+
+	@Override
+	public void buildWalls() {
+		System.out.println(" 普通房子砌墙10cm ");
+	}
+
+	@Override
+	public void roofed() {
+		System.out.println(" 普通房子屋顶 ");
+	}
 }
 ```
 
-+ 控制台输出：
+（4）创建指挥类
 
 ```java
-地基
-钢筋水泥
-铺电线
-粉刷
-```
+package com.atguigu.builder.improve;
 
-上面的例子是Builder模式的常规用法，导演类Director在Builder模式中起着很重要的作用，它用于指导具体构建者如何构建产品，控制调用先后顺序，并向调用者返回完整的产品类。但是有些情况下需要简化系统结构，可以把Director和抽象建造者进行结合。
+//指挥者，这里去指定制作流程，返回产品
+public class HouseDirector {
+	//属性，拥有一个build
+	HouseBuilder houseBuilder = null;
 
-通过静态内部类方式实现零件无序装配构造，这种方式使用更加灵活，更符合定义。内部有复杂对象的默认实现，使用时可以根据用户需求自由定义更改内容，并且无需改变具体的构造方式。就可以生产出不同复杂产品。
+	//方式1：构造器传入 houseBuilder（houseBuilder传入的两种方式）
+	public HouseDirector(HouseBuilder houseBuilder) {
+		this.houseBuilder = houseBuilder;
+	}
 
-比如：麦当劳的套餐，服务者（具体建造者）可以随意搭配任意几种产品（零件）组成一套套餐（产品），然后出售给客户。比第一种方式少了指挥者，主要是因为第二种方式把指挥者交给用户来操作，使得产品创建更加简单灵活。
+	//方式2：通过setter 传入 houseBuilder
+	public void setHouseBuilder(HouseBuilder houseBuilder) {
+		this.houseBuilder = houseBuilder;
+	}
 
-#### 1.4.2.2 改进用法
-
-1. **创建抽象的建造者**
-
-```java
-//抽象的建造者，定义一些方法和接口
-public abstract class Builder {
-    //假如产品，不进行赋值任何东西，就是默认的套餐汉堡、可乐啥的，假如赋值一些自定义选择，就是不一样
-    abstract Builder builderA(String msg);  //汉堡
-    abstract Builder builderB(String msg);  //可乐
-    abstract Builder builderC(String msg);  //薯条
-    abstract Builder builderD(String msg);  //甜点
-
-    //得到具体的产品
-    abstract Product getProduct();
+	//如何处理建造房子的流程，交给指挥者
+	public House constructHouse() {
+		houseBuilder.buildBasic();
+		houseBuilder.buildWalls();
+		houseBuilder.roofed();
+		return houseBuilder.buildHouse();
+	}
 }
 ```
 
-2. **创建产品类**
+（5）客户端-测试
 
 ```java
-//产品，套餐
-public class Product {
-    //默认的套餐
-    private String buildA = "汉堡";
-    private String buildB = "可乐";
-    private String buildC = "薯条";
-    private String buildD = "甜点";
+package com.atguigu.builder.improve;
 
-    public String getBuildA() {
-        return buildA;
-    }
+public class Client {
+   public static void main(String[] args) {
+      //盖普通房子
+      CommonHouse commonHouse = new CommonHouse();
+      //准备创建房子的指挥者
+      HouseDirector houseDirector = new HouseDirector(commonHouse);
 
-    public void setBuildA(String buildA) {
-        this.buildA = buildA;
-    }
+      //完成盖房子，返回产品(普通房子)
+      House house = houseDirector.constructHouse();
 
-    public String getBuildB() {
-        return buildB;
-    }
 
-    public void setBuildB(String buildB) {
-        this.buildB = buildB;
-    }
-
-    public String getBuildC() {
-        return buildC;
-    }
-
-    public void setBuildC(String buildC) {
-        this.buildC = buildC;
-    }
-
-    public String getBuildD() {
-        return buildD;
-    }
-
-    public void setBuildD(String buildD) {
-        this.buildD = buildD;
-    }
-
-    @Override
-    public String toString() {
-        return "Product{" +
-                "buildA='" + buildA + '\'' +
-                ", buildB='" + buildB + '\'' +
-                ", buildC='" + buildC + '\'' +
-                ", buildD='" + buildD + '\'' +
-                '}';
-    }
+      System.out.println("--------------------------");
+      //盖高楼
+      HighBuilding highBuilding = new HighBuilding();
+      //重置建造者，setter方法传入HouseBuilder
+      houseDirector.setHouseBuilder(highBuilding);
+      //完成盖房子，返回产品(高楼)
+      houseDirector.constructHouse();
+   }
 }
 ```
 
-3. **创建工人类**
+总结：
 
-```java
-//具体的建造者：工人（完成这些步骤，返回产品）
-public class Worker extends Builder {
-    private Product product; //需要完成的产品
+（1）优点
 
-    public Worker() {
-        product = new Product();
-    }
-
-    @Override
-    Builder builderA(String msg) {
-        product.setBuildA(msg);
-        return this;
-    }
-
-    @Override
-    Builder builderB(String msg) {
-        product.setBuildB(msg);
-        return this;
-    }
-
-    @Override
-    Builder builderC(String msg) {
-        product.setBuildC(msg);
-        return this;
-    }
-
-    @Override
-    Builder builderD(String msg) {
-        product.setBuildD(msg);
-        return this;
-    }
-
-    @Override
-    Product getProduct() {
-        return product;
-    }
-}
-```
-
-4. **测试类**
-
-```java
-public class Test {
-    public static void main(String[] args) {//表示层
-        //服务员
-        Worker worker = new Worker();
-        //获得最终的产品(这里是默认值)
-//        Product product = worker.getProduct();
-        //链式编程（通过work自己去选择套餐），自定义组合，如果不组合，也有默认套餐
-        Product product = worker.builderA("全家桶").builderB("雪碧").getProduct();
-        System.out.println(product);
-    }
-}
-```
-
-+ 控制台输出：
-
-```java
-Product{buildA='全家桶', buildB='雪碧', buildC='薯条', buildD='甜点'}
-```
-
-**优点**
-
-产品的建造和表示分离，实现了解耦。使用建造者模式可以使客户端不必知道产品内部组成的细节。
-
-将复杂产品的创建步骤分解在不同的方法中，使得创建过程更加清晰。
+产品的建造和属性分离，实现了解耦。使用建造者模式可以使客户端不必知道产品内部组成的细节。将复杂产品的创建步骤分解在不同的方法中，使得创建过程更加清晰。
 
 具体的建造者类之间是相互独立的，这有利于系统的扩展。增加新的具体建造者无需修改原有类库的代码，符合“开闭原则”。
 
-**缺点**
+（2）缺点
 
 建造者模式所创建的产品一般具有较多的共同点，其组成部分相似；如果产品之间的差异性很大，则不适合使用建造者模式，因此其使用范围受到一定的限制。
 
 如果产品的内部变化比较复杂，可能会导致需要定义很多具体建造者类来实现这种变化，导致系统变得很庞大。
 
-## 1.5 代理模式
+（3）细节
+
+建造者模式所创建的产品一般具有较多的共同点，其组成部分相似，如果产品之间 的差异性很大，则不适合使用建造者模式，因此其使用范围受到一定的限制。
+
+（4）抽象工厂模式VS建造者模式 
+
+抽象工厂模式实现对产品家族的创建，一个产品家族是这样的一系列产品：具有不 同分类维度的产品组合，采用抽象工厂模式不需要关心构建过程，只关心什么产品 由什么工厂生产即可。而建造者模式则是要求按照指定的蓝图建造产品，它的主要目的是通过组装零配件而产生一个新产品。
+
+## 5、代理模式
 
 代理模式是Spring AOP底层（面试：Spring AOP 和Spring MVC）。
 
@@ -1328,9 +1313,19 @@ result=3
 
 可以发现，确实当方法add()执行后，关于这个方法的附属方法执行了。
 
-## 1.6 原型模式
+## 6、原型模式（Prototype）
 
 以原来对象为模板，进行复制一份的过程。
+
+使用传统方式缺点：
+
+在创建新的对象时，总是需要重新获取原始对象的属性，如果创建的对象比较复杂时，效率较低。总是需要重新初始化对象，而不是动态地获得对象运行时的状态, 不够灵活。
+
+改进：
+
+Java中Object类是所有类的根类，Object类提供了一个clone()方法，该方法可以将一个Java对象复制一份，但是需要实现clone的Java类必须要实现一个接口Cloneable， 该接口表示该类能够复制且具有复制的能力 => 原型模式。
+
+原型模式是一种创建型设计模式，允许一个对象再创建另外一个可定制的对象， 无需知道如何创建的细节。
 
 1. **原型**
 
@@ -1376,7 +1371,9 @@ public class Video implements Cloneable{
                 ", createTime=" + createTime +
                 '}';
     }
-
+		
+   //克隆该实例，使用默认的clone方法来完成
+   //浅拷贝是使用默认的 clone()方法来实现
     @Override
     protected Object clone() throws CloneNotSupportedException {
         return super.clone();
@@ -1391,12 +1388,13 @@ public class Bibi {
     public static void main(String[] args) throws CloneNotSupportedException {
         //原型对象
         Date date = new Date();
+        //data表示一个对象的引用
         Video v1 = new Video("xiaolun", date);
         System.out.println("v1--->"+v1);
         System.out.println("v1的hascode()---->"+v1.hashCode());
 
         //通过v1创建v2
-        //克隆出来的脆响确实和原来的对象一样。
+        //克隆出来的对象确实和原来的对象一样。
         Video v2 = (Video) v1.clone();
         System.out.println("v2--->"+v2);
         System.out.println("v2的hascode()---->"+v2.hashCode());
@@ -1404,7 +1402,7 @@ public class Bibi {
 }
 ```
 
-+ 控制台输出
+控制台输出：
 
 ```java
 v1--->Visio{name='xiaolun', createTime=Tue Jun 23 16:36:54 CST 2020}
@@ -1417,20 +1415,41 @@ v2的hascode()---->21685669
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623170100439.png" alt="image-20200623170100439" style="zoom:80%;" />
 
-1. **改造克隆代码**
+### 1、深克隆
+
+浅拷贝介绍：
+
+对于数据类型是基本数据类型的成员变量，浅拷贝会直接进行值传递，也就是将该属性值复制一份给新的对象。 
+
+对于数据类型是引用数据类型的成员变量，比如说成员变量是某个数组、某个类 的对象等，那么浅拷贝会进行引用传递，也就是只是将该成员变量的引用值（内 存地址）复制一份给新的对象。因为实际上两个对象的该成员变量都指向同一个 实例。在这种情况下，在一个对象中修改该成员变量会影响到另一个对象的该成 员变量值。
+
+深拷贝介绍：
+
+复制对象的所有基本数据类型的成员变量值。
+
+为所有引用数据类型的成员变量申请存储空间，并复制每个引用数据类型成员变量所引用的对象，直到该对象可达的所有对象。也就是说，对象进行深拷贝要对整个对象进行拷贝。
+
+实现方式：
+
+（1）重写clone方法来实现深拷贝
+
+（2）通过对象序列化实现深拷贝(推荐)
+
+1、改造克隆代码
 
 ```java
  @Override
     protected Object clone() throws CloneNotSupportedException {
+      //这里完成对基本数据类型(属性)和String的克隆
         Object obj = super.clone();
-        //需要将这个对象的属性也进行克隆，然后将新属性赋值给新的对象。
+ //需要将这个对象的属性也进行克隆，然后将新属性赋值给新的对象。对引用类型的属性，进行单独处理
         Video v = (Video)obj;
         v.createTime = (Date) this.createTime.clone();
         return obj;
     }
 ```
 
-2. **测试**
+2、测试
 
 ```java
 public static void main(String[] args) throws CloneNotSupportedException {
@@ -1448,7 +1467,7 @@ public static void main(String[] args) throws CloneNotSupportedException {
 }
 ```
 
-+ 控制台输出,可以看到实现了深克隆。
+控制台输出,可以看到实现了深克隆：
 
 ```java
 v1--->Visio{name='xiaolun', createTime=Tue Jun 23 16:54:40 CST 2020}
@@ -1458,11 +1477,13 @@ v1--->Visio{name='xiaolun', createTime=Thu Jan 01 08:03:42 CST 1970}
 v2--->Visio{name='xiaolun', createTime=Tue Jun 23 16:54:40 CST 2020}
 ```
 
+### 2、原型模式在Spring框架中源码分析
 
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200922185838598.png" alt="image-20200922185838598" style="zoom:80%;" />
 
 # 2 结构型模式
 
-## 2.1 结构型模式
+## 1、结构型模式
 
 作用：在程序的结构上松耦合，从而扩大整体的类结构，用来解决更大的问题。
 
@@ -1488,9 +1509,7 @@ v2--->Visio{name='xiaolun', createTime=Tue Jun 23 16:54:40 CST 2020}
 
 可以将输入的字节流变成字符流。
 
-
-
-### 2.1.1 测试
+### 测试
 
 1. **需要适配的类**
 
@@ -1566,7 +1585,27 @@ public class Computer {
 连接网线上网
 ```
 
-## 2.2 桥接模式
+## 2、桥接模式（Bridge）
+
+### 1、介绍
+
+1、原理图说明
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200922212214719.png" alt="image-20200922212214719" style="zoom:80%;" />
+
+（1）client类：桥接模式的调用者
+
+（2）抽象类（Abstraction）：维护了Implementor和它的实现类ConcreteImplementorA/B之间的关系,二者是聚合关系，Abstraction充当桥接类。
+
+（3）RefinedAbstraction：是Abstraction抽象类的子类。
+
+（4）Implementor：行为实现类的接口。
+
+（5）ConcreteImplementorA/B：行为的具体实现类。
+
+从UML图中可以看出，这里的抽象类和接口是聚合关系，也就是调用和被调用的关系。
+
+
 
 该模式是将抽象部分与它的实现部分分离，使它们都可以独立的变化。它是一种对象结构型模式，又称为接口模式。
 
@@ -1584,17 +1623,15 @@ public class Computer {
 
 **缺点**
 
-该模式的引入会增加系统的理解和设计难度，由于聚合关联关系建立在抽象层，要开开发者针对抽象进行设计和编程。
+该模式的引入会增加系统的理解和设计难度，由于聚合关联关系建立在抽象层，要开发者针对抽象进行设计和编程。
 
 同时，该模式要求开发人员需要能够正确识别出系统中两个独立变化的维度，因此，其使用范围具有一定的局限性。
 
-
-
-### 2.2.1 测试
+### 1、测试
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623154425976.png" alt="image-20200623161516493" style="zoom:80%;" />
 
-1. **品牌接口类**
+1、品牌接口类
 
 ```java
 //品牌
@@ -1603,7 +1640,7 @@ public interface Brand {
 }
 ```
 
-1. **品牌接口实现的类**
+2、品牌接口实现的类
 
 ```java
 //联想品牌
@@ -1627,7 +1664,7 @@ public class Apple implements Brand {
 }
 ```
 
-2. **电脑类型**
+3、电脑类型
 
 ```java
 //抽线的电脑类
@@ -1676,7 +1713,7 @@ class Laptop extends Computer{
 }
 ```
 
-3. **测试类**
+4、测试类
 
 ```java
 public class Test {
@@ -1689,7 +1726,7 @@ public class Test {
 }
 ```
 
-+ 控制台输出
+控制台输出：
 
 ```
 苹果
